<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/passwordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:inputType="textPassword"
        android:textCursorDrawable="@color/color_primary"
        android:backgroundTint="@color/color_primary"
        android:hint="@string/passord_alert_hint"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/passwordCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:textColor="@color/color_primary"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/passord_alert_cancel"/>

        <Button
            android:id="@+id/passwordEnterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/color_primary"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:layout_toRightOf="@+id/passwordCancelButton"
            android:text="@string/passord_alert_continue"/>
    </RelativeLayout>

</LinearLayout>