<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.android.xamoom.tourismtemplate.fragments.SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/notification_title_text_view"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/settings_fragment_notification_title"
                android:textColor="@color/color_primary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/notification_on_text_view"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="0dp"
                android:gravity="center_vertical"
                android:text="@string/settings_fragment_notifications"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/notification_on_switch"
                app:layout_constraintTop_toBottomOf="@+id/notification_title_text_view" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notification_on_switch"
                android:layout_width="82dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:theme="@style/FilterSwitchTheme"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/notification_on_text_view" />

            <RelativeLayout
                android:id="@+id/soundLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/notification_on_text_view">

                <TextView
                    android:id="@+id/notification_sound_on_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/settings_fragment_notification_sound"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/notification_sound_on_switch" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/notification_sound_on_switch"
                    android:layout_width="82dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:theme="@style/FilterSwitchTheme"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/notification_sound_on_text_view" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vibrationLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/soundLayout">

                <TextView
                    android:id="@+id/notification_vibration_on_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/settings_fragment_notification_vibration"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/notification_vibration_on_switch"
                    android:layout_width="82dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="16dp"
                    android:theme="@style/FilterSwitchTheme"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/notification_vibration_on_text_view" />
            </RelativeLayout>

            <TextView
                android:id="@+id/navigation_title_text_view"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/settings_fragment_navigation_title"
                android:textColor="@color/color_primary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vibrationLayout" />


            <RadioGroup
                android:id="@+id/navigation_radio_group"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/navigation_title_text_view">

                <RadioButton
                    android:id="@+id/navigation_walking_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/settings_fragment_navigation_walking"
                    android:textSize="14sp"
                    app:layout_constraintRight_toRightOf="parent" />


                <RadioButton
                    android:id="@+id/navigation_bike_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/settings_fragment_navigation_biking"
                    app:layout_constraintRight_toRightOf="parent" />

                <RadioButton
                    android:id="@+id/navigation_car_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/settings_fragment_navigation_car"
                    app:layout_constraintRight_toRightOf="parent" />
            </RadioGroup>


            <TextView
                android:id="@+id/language_title_textView"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/language_picker_title"
                android:textColor="@color/color_primary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/navigation_radio_group" />


            <RadioGroup
                android:id="@+id/languages_radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/language_title_textView">

            </RadioGroup>


            <TextView
              android:id="@+id/ephemeral_id_textView"
              android:layout_width="match_parent"
              android:layout_height="120dp"
              android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp"
              android:textSize="16sp"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/languages_radio_group" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
